@@ -15,14 +15,13 @@ use LaTeXML::Util::ObjectDB;
 
 #**********************************************************************
 # Parse command line
-
 my $identity = "latexml (LaTeXML version $LaTeXML::VERSION)";
 my($verbosity,$strict,$comments,$noparse,$includestyles,
-   $errlog,$post,$standard)=(0,0,1,0,0,0,0,0);
-my ($format,$destination,$log,$help,$showversion,$stylesheet)=('xml','','');
+   $errlog,$post)=(0,0,1,0,0,0,0);
+my ($format,$mode,$destination,$log,$help,$showversion,$stylesheet)=('xml','fragment','','');
 my ($documentid);
 my $inputencoding;
-my $mode = 'auto';
+my $type = 'auto';
 my @paths = ('.');
 my (@preload,@debugs);
 GetOptions("destination=s" => \$destination,
@@ -35,9 +34,9 @@ GetOptions("destination=s" => \$destination,
 	   "xml"       => sub { $format = 'xml'; },
 	   "tex"       => sub { $format = 'tex'; },
 	   "box"       => sub { $format = 'box'; },
-	   "bibtex"    => sub { $mode='bibtex'; },
+	   "bibtex"    => sub { $type='bibtex'; },
 	   "noparse"   => \$noparse,
-	   "standard"  => \$standard,
+	   "mode=s"  => \$mode,
 	   "log=s"       => \$log,
 	   "includestyles"=> \$includestyles,
 	   "inputencoding=s"=>\$inputencoding,
@@ -55,12 +54,17 @@ if($showversion){ print STDERR "$identity\n"; exit(1); }
 #This is obsolete in daemon mode:
 #pod2usage(-message=>"$identity\nMissing input TeX file", 
 #	  -exitval=>1, -verbose=>0,-output=>\*STDERR) unless @ARGV;
-my $source = $ARGV[0];
-my @sources = @ARGV; #Deyan: adding support for multiple file parts
+
 #**********************************************************************
 # Set up the processing.
 print STDERR "$identity\n" unless $verbosity < 0;
 
+$mode = lc($mode);
+if ($mode eq "math") {
+    #Preload math packages:
+    my  @mathpreload = ("LaTeX.pool", "amsmath.sty", "amsthm.sty", "amstext.sty", "amssymb.sty", "eucal.sty");
+    @preload=(@preload,@mathpreload);
+}
 @paths = map(pathname_canonical($_),@paths);
 my $latexml= LaTeXML->new(preload=>[@preload], searchpaths=>[@paths],
 			  verbosity=>$verbosity, strict=>$strict,
@@ -72,9 +76,9 @@ my $latexml= LaTeXML->new(preload=>[@preload], searchpaths=>[@paths],
 if(my @baddirs = grep(! -d $_, @paths)){
     warn "$identity: these path directories do not exist: ".join(', ',@baddirs)."\n"; }
 binmode(STDERR,":utf8");
+our %PostOPS = (verbosity=>$verbosity||0);
 
 #Initialize state:
-my $initstate;
 $latexml->withState(sub {
   my($state)=@_;
   $latexml->initializeState('TeX.pool', @{$$latexml{preload} || []});
@@ -84,13 +88,31 @@ print STDERR "\n"; #Sanitize log.
 #**********************************************************************
 # Daemon has been set up, now process files on demand:
 while(1) {
-    $source = <>;
+    my $source = <>;
     chomp $source;
-    $source =~s/(^\s+)|(\s+$)//g;#Cleanup spaces
-    last if (!$source || ($source eq ":q") || ($source eq "")); #:q or empty marks we're done
+    $source =~ s/^\s+//; #Cleanup space
+    $source =~ s/\s+$//; #Cleanup space
+    last if (!$source || ($source eq "")); #empty marks we're done
+    if ($mode eq "math") {
+	#Special handling for math --mode
+	my $texdoc = mathdoc($source);
+	my $dom;
+	eval {
+	    my $digested = $latexml->digestStringDaemonized($texdoc);
+	    $dom = $latexml->convertDocument($digested);
+	};
+	doPost($log,$destination,$stylesheet,$dom,"math");
+	undef $texdoc;
+	next;
+    }
+    if($source eq '-'){
+	print STDERR "Invalid source file:\n"
+	." latexmldaemon requires a filepath per line as arguments\n";
+	next;
+    }
     $source = pathname_find($source,types=>['tex','']);
     $source = pathname_canonical($source);
-    $mode = 'bibtex' if ($mode eq 'auto') && ($source =~ /\.bib$/);
+    $type = 'bibtex' if ($type eq 'auto') && ($source =~ /\.bib$/);
     # ========================================
     # First read and digest whatever we're given.
     my $digested;
@@ -115,77 +137,70 @@ while(1) {
     } else {
 	$cdest = $source.".$format";
     }
-    if($source eq '-'){
-	print STDERR "Invalid source file:\n"
-	." latexmldaemon requires a filepath per line as arguments\n";
-	next;
-    }
-    else {
-	# ===============================================
-	#TODO: adding support for multiple file on input
-	# (is this really something we want here?)
-	if ($standard) {
-	    #In the classic case, we need to reinitialize latexml
-	    # on every input
-	    $latexml= LaTeXML->new(preload=>[@preload], searchpaths=>[@paths],
+    if ($mode eq "standard") {
+	#In the classic case, we need to reinitialize latexml
+	# on every input
+	undef $latexml;
+	$latexml= LaTeXML->new(preload=>[@preload], searchpaths=>[@paths],
 			  verbosity=>$verbosity, strict=>$strict,
 			  includeComments=>$comments,inputencoding=>$inputencoding,
 			  includeStyles=>$includestyles,
 			  documentid=>$documentid,
 			  nomathparse=>$noparse);
-	    $latexml->withState(sub {
+	$latexml->withState(sub {
 	       my($state)=@_;
 	       $latexml->initializeState('TeX.pool', @{$$latexml{preload} || []});
 	   });
-	    print STDERR "\n"; #Again, flush log
-	}
-	$latexml->withState(sub {
+	print STDERR "\n"; #Again, flush log
+    }
+    #Continue with processing in standard and fragment cases:
+    $latexml->withState(sub {
 	   my($state)=@_;#Sandbox state
 	   $state->pushFrame; });
-	my $serialized;
-	my $dom;
-	eval {
-	    if ($mode eq 'bibtex'){
-		$digested = $latexml->digestBibTeXFileDaemonized($source); }
+    my $serialized;
+    my $dom;
+    eval {
+	if ($type eq 'bibtex'){
+	    $digested = $latexml->digestBibTeXFileDaemonized($source); }
+	else {
+	    $digested = $latexml->digestFileDaemonized($source); 
+	}
+	# ========================================
+	# Now, convert to DOM and output, if desired.
+	#use Encode;
+	if($digested){
+	    local $LaTeXML::Global::STATE = $$latexml{state};
+	    if($format eq 'tex'){
+		$serialized = LaTeXML::Global::UnTeX($digested); }
+	    elsif($format eq 'box'){
+		$serialized = $digested->toString; }
 	    else {
-		$digested = $latexml->digestFileDaemonized($source); 
+		$dom = $latexml->convertDocument($digested); 
+		$serialized = $dom->toString(1);
 	    }
-	    # ========================================
-	    # Now, convert to DOM and output, if desired.
-	    #use Encode;
-	    if($digested){
-		local $LaTeXML::Global::STATE = $$latexml{state};
-		if($format eq 'tex'){
-		    $serialized = LaTeXML::Global::UnTeX($digested); }
-		elsif($format eq 'box'){
-		    $serialized = $digested->toString; }
-		else {
-		    $dom = $latexml->convertDocument($digested); 
-		    $serialized = $dom->toString(1);
-		}
-	    }
-	};
-	if ($@) { #Fatal occured!
-	    print STDERR "$@\n";
-	    print STDERR "\nConversion complete: ".$latexml->getStatusMessage.".\n";
-	    #Need to reset latexml in these cases
-	    if ($log) { close(LOG); *STDERR = *ERRORIG;} #Close log file
-	    undef $latexml;
-	    $latexml= LaTeXML->new(preload=>[@preload], searchpaths=>[@paths],
+	}
+    };
+    if ($@) { #Fatal occured!
+	print STDERR "$@\n";
+	print STDERR "\nConversion complete: ".$latexml->getStatusMessage.".\n";
+	#Need to reset latexml in these cases
+	if ($log) { close(LOG); *STDERR = *ERRORIG;} #Close log file
+	undef $latexml;
+	$latexml= LaTeXML->new(preload=>[@preload], searchpaths=>[@paths],
 			  verbosity=>$verbosity, strict=>$strict,
 			  includeComments=>$comments,inputencoding=>$inputencoding,
 			  includeStyles=>$includestyles,
 			  documentid=>$documentid,
 			  nomathparse=>$noparse);
-	    $latexml->withState(sub {
+	$latexml->withState(sub {
 	       my($state)=@_;
 	       $latexml->initializeState('TeX.pool', @{$$latexml{preload} || []});
-	    });
-	    print STDERR "\n"; #Again, flush log
-	    next; #Move on, no body to be produced.
-	}
-	print STDERR "\nConversion complete: ".$latexml->getStatusMessage.".\n";
-	$latexml->withState(sub {
+	   });
+	print STDERR "\n"; #Again, flush log
+	next; #Move on, no body to be produced.
+    }
+    print STDERR "\nConversion complete: ".$latexml->getStatusMessage.".\n";
+    $latexml->withState(sub {
           my($state)=@_;#Remove current state frame
 	  $state->popFrame;
 	  $state->setStatus("warning",0);
@@ -194,78 +209,137 @@ while(1) {
 	  $state->setStatus("undefined",0);
 	  $state->setStatus("missing",0);
       });
-	if($cdest){
-	    open(OUT,">",$cdest) or die "Couldn't open output file $cdest: $!"; }
-	else {
-	    #  binmode(STDOUT,":utf8");
-	    *OUT = *STDOUT; }
-	print OUT $serialized if $serialized;
-	if($cdest){ 
-	    close(OUT); }
-	if ($log) { close(LOG); *STDERR = *ERRORIG;} #Close log file
-	if ($post && $dom && $cdest && (!$noparse)) {
-	    #Postprocess
-	    #TODO: Make this scalable, currently the arXMLiv default is hardcoded
-	    my $postlog = $clog;
-	    if ($postlog) {
-		#Add .post. to log name
-		$postlog=~s/\.(\w+)$/".post.".$1/e;
-		open(PLOG,">$postlog");
-		*ERRORIG = *STDERR;
-		*STDERR = *PLOG;
-	    }
-	    my $postdest = $cdest;
-	    $postdest.=".xhtml" unless
-	    ($postdest=~s/\.tex\.xml$/.xhtml/ || $postdest=~s/\.xml$/.xhtml/);
-	    $stylesheet = "LaTeXML-xhtml.xsl" unless $stylesheet;
-	    my @css = ("core.css");
-	    my $parallelmath = 1;
-	    my $doc = LaTeXML::Post::Document->new($dom,
-						   destination=>$postdest,nocache=>1);
-	    our %PostOPS = (verbosity=>$verbosity||0);
-	    require 'LaTeXML/Post/MathML.pm';
-	    require 'LaTeXML/Post/PurgeXMath.pm';
-	    my @mprocs = (LaTeXML::Post::MathML::Presentation->new(%PostOPS),
-			  LaTeXML::Post::MathML::Content->new(%PostOPS));
-	    my $main = shift(@mprocs);
-	    $main->setParallel(@mprocs);
-	    my @procs;
-	    push(@procs,$main);
-	    push(@procs, LaTeXML::Post::PurgeXMath->new(%PostOPS));
-	    require 'LaTeXML/Post/XSLT.pm'; 
-	    my @csspaths=();
-	    foreach my $css (@css){
-		$css .= '.css' unless $css =~ /\.css$/;
-		# Dance, if dest is current dir, we'll find the old css before the new one!
-		my @csssources = map(pathname_canonical($_),
-				     pathname_findall($css,types=>['css'],
-						      (),
-						      installation_subdir=>'style'));
-		my $csspath = pathname_absolute($css,pathname_directory($destination));
-		while(@csssources && ($csssources[0] eq $csspath)){ shift(@csssources); }
-		my $csssource = shift(@csssources);
-		pathname_copy($csssource,$csspath)  if $csssource && -f $csssource;
-		push(@csspaths,$csspath); }
-	    push(@procs,LaTeXML::Post::XSLT->new(stylesheet=>$stylesheet,
-						 css=>[@csspaths],
-						 parameters=>{number_sections
-							      =>("true()")
-							     },
-						 %PostOPS));
-	    push(@procs,LaTeXML::Post::Writer->new(format=>"xhtml",omit_doctype=>0,%PostOPS));
-	    eval { LaTeXML::Post::ProcessChain($doc,@procs); };
-	    if ($@) { #Fatal occured!
-		#Since this is postprocessing, we don't need to do anything
-		#   just avoid crashing...
-		print STDERR "$@\n";
-	    }
-	    if ($postlog) {
-		close PLOG;
-		*STDERR = *ERRORIG;
-	    }
+    if($cdest){
+	open(OUT,">",$cdest) or die "Couldn't open output file $cdest: $!"; }
+    else {
+	#  binmode(STDOUT,":utf8");
+	*OUT = *STDOUT; }
+    print OUT $serialized if $serialized;
+    if($cdest){ 
+	close(OUT); }
+    if ($log) { close(LOG); *STDERR = *ERRORIG;} #Close log file
+    if ($post && $dom && $cdest && (!$noparse)) {
+	#Postprocess
+	my $postlog = $clog;
+	if ($postlog) {
+	    #Add .post. to log name
+	    $postlog=~s/\.(\w+)$/".post.".$1/e;
+	    open(PLOG,">$postlog");
+	    *ERRORIG = *STDERR;
+	    *STDERR = *PLOG;
 	}
+	my $postdest = $cdest;
+	$postdest.=".xhtml" unless
+	($postdest=~s/\.tex\.xml$/.xhtml/ || $postdest=~s/\.xml$/.xhtml/);
+	doPost($postlog,$postdest,$stylesheet,$dom);
     }
 }
+
+#======================================================================
+# Helpers
+#======================================================================
+
+sub doPost {
+    my ($postlog,$postdest,$stylesheet,$dom,$extract)=@_;
+    #Postprocess
+    #TODO: Make this scalable, currently the arXMLiv default is hardcoded
+    $stylesheet = "LaTeXML-xhtml.xsl" unless $stylesheet;
+    my @css = ("core.css");
+    my $parallelmath = 1;
+    my $doc = LaTeXML::Post::Document->new($dom,
+					   destination=>$postdest,nocache=>1);
+    require 'LaTeXML/Post/MathML.pm';
+    require 'LaTeXML/Post/PurgeXMath.pm';
+    my @mprocs = (LaTeXML::Post::MathML::Presentation->new(%PostOPS),
+		  LaTeXML::Post::MathML::Content->new(%PostOPS));
+    my $main = shift(@mprocs);
+    $main->setParallel(@mprocs);
+    my @procs;
+    push(@procs,$main);
+    push(@procs, LaTeXML::Post::PurgeXMath->new(%PostOPS));
+    require 'LaTeXML/Post/XSLT.pm'; 
+    my @csspaths=();
+    foreach my $css (@css){
+	$css .= '.css' unless $css =~ /\.css$/;
+	# Dance, if dest is current dir, we'll find the old css before the new one!
+	my @csssources = map(pathname_canonical($_),
+			     pathname_findall($css,types=>['css'],
+					      (),
+					      installation_subdir=>'style'));
+	my $csspath = pathname_absolute($css,pathname_directory($postdest));
+	while(@csssources && ($csssources[0] eq $csspath)){ shift(@csssources); }
+	my $csssource = shift(@csssources);
+	pathname_copy($csssource,$csspath)  if $csssource && -f $csssource;
+	push(@csspaths,$csspath); }
+    push(@procs,LaTeXML::Post::XSLT->new(stylesheet=>$stylesheet,
+					 css=>[@csspaths],
+					 parameters=>{number_sections
+						      =>("true()")
+						     },
+					 %PostOPS))
+    unless ($extract eq "math" || !$postdest);
+    push(@procs,LaTeXML::Post::Writer->new(format=>"xhtml",omit_doctype=>0,%PostOPS))
+     unless ($extract eq "math");
+    my $postdoc;
+    eval { ($postdoc) = LaTeXML::Post::ProcessChain($doc,@procs); };
+    if ($@) { #Fatal occured!
+	#Since this is postprocessing, we don't need to do anything
+	#   just avoid crashing...
+	print STDERR "$@\n";
+    }
+    elsif ($extract eq "math") {
+	outputXML($postdoc->findnode('//m:math'),$postdest||"-");
+    }
+}
+
+sub outputXML {
+  my($xml,$destination)=@_;
+  # Need to move the node to a new document to set up namespaces
+  my $newdoc = XML::LibXML::Document->new("1.0","UTF-8");
+  $newdoc->setDocumentElement($xml);
+  my $serialized = $newdoc->toString(1);
+  undef $newdoc;
+  if ($destination eq '-') {
+      print $serialized; 
+  }
+  else {
+      open(OUT,">$destination");
+      print OUT $serialized;
+      close OUT;
+  }
+}
+
+sub mathdoc {
+#======================================================================
+# TeX Source
+#======================================================================
+# First read and digest whatever we're given.
+    my ($tex) = @_;
+# We need to determine whether the TeX we're given needs to be wrapped in \[...\]
+# Does it have $'s around it? Does it have a display math environment?
+# The most elegant way would be to notice as soon as we start adding to the doc
+# and switch to math mode if necessary, but that's tricky.
+# Let's just try a manual hack, looking for known switches...
+our $MATHENVS = 'math|displaymath|equation*?|eqnarray*?'
+  .'|multline*?|align*?|falign*?|alignat*?|xalignat*?|xxalignat*?|gather*?';
+
+if(($tex =~ /^\$/) && ($tex =~ /\$$/)){} # Wrapped in $'s
+elsif(($tex =~ /^\\\(/) && ($tex =~ /\\\)$/)){} # Wrapped in \(...\)
+elsif(($tex =~ /^\\\[/) && ($tex =~ /\\\]$/)){} # Wrapped in \[...\]
+elsif(($tex =~ /^\\begin\{($MATHENVS)\}/) && ($tex =~ /\\end\{$1\}$/)){}
+else {
+  $tex = '\[ '.$tex.' \]'; }
+
+my $texdoc = <<EODoc;
+\\begin{document}
+\\newcounter{equation}
+\\newcounter{Unequation}
+$tex
+\\end{document}
+EODoc
+$texdoc;
+}
+
 #**********************************************************************
 __END__
 
@@ -297,8 +371,8 @@ latexml [options] I<texfile>
  --box              requests box output after expansion
                     and digestion.
  --noparse          suppresses parsing math (default: off)
- --standard         parse entire documents (slower)
-                    default: off
+ --mode             standard|math|fragment parsing mode
+                    default: fragment
  --post             requests a followup postprocessing
  --stylesheet       specifies a stylesheet,
                     to be used by the postprocessor.
@@ -405,10 +479,14 @@ This may not be quite valid TeX, since Unicode may be introduced.
 Requests Box output for debugging purposes;  processing is carried out through expansion and digestions,
 and the result is printed.
 
-=item C<--standard>
+=item C<--mode>
 
-Turns on the classic, unoptimized processing of documents as performed by latexml.
-This is suitable for processing sets of heterogeneous documents, but is slower in general.
+fragment: Default, parses \begin{document}...\end{document} fragments.
+          Assumes frontmatter is fixed, which achieves a big speedup since
+          no state reinitialization is necessary.
+standard: Turns on the classic, unoptimized processing of documents as performed by latexml.
+          This is suitable for processing sets of heterogeneous documents, but is slower in general.
+math:     Like latexmlmath, parses a single TeX formula per line.
 
 =item C<--post>
 
